# rust-warp-sveltekit

./: Cargo.toml  README.md
src/: main.rs
web/: package-lock.json  package.json  svelte.config.js
web/src/routes/: +page.svelte  +page.ts
