[package]
name = "rust-warp-sveltekit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={ version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
warp = "0.3"
warp-embed = "0.5"
rust-embed = "8"
log = "0.4"
env_logger = "0.11"